# sql-plan-compiler

./: .gitignore  Aggregation.py  HashJoin.py  README.md  Scan.py  Selection.py  helper.py  v2.py  v3.py
gpu-db/: CMakeLists.txt  make-chart.py
gpu-db/db-utils/: arrowutils.h  cudautils.cuh  db_types.h
gpu-db/ssb/: 11-1.expected.csv  11-1.expected.sorted.csv  11-10.expected.sorted.csv  12-1.expected.sorted.csv  12-10.expected.sorted.csv  13-1.expected.csv  13-1.expected.sorted.csv  13-10.expected.csv  13-10.expected.sorted.csv  21-1.expected.sorted.csv  21-10.expected.csv  21-10.expected.sorted.csv  22-1.expected.csv  22-1.expected.sorted.csv  22-10.expected.csv  22-10.expected.sorted.csv  23-1.expected.sorted.csv  23-10.expected.sorted.csv  31-1.expected.csv  31-1.expected.sorted.csv  31-10.expected.csv  31-10.expected.sorted.csv  32-1.expected.sorted.csv  32-10.expected.sorted.csv  33-1.expected.sorted.csv  33-10.expected.sorted.csv  34-1.expected.sorted.csv  34-10.expected.sorted.csv  41-1.expected.sorted.csv  41-10.expected.csv  41-10.expected.sorted.csv  42-1.expected.sorted.csv  42-10.expected.sorted.csv  43-1.expected.csv  43-1.expected.sorted.csv  43-10.expected.csv  43-10.expected.sorted.csv  Makefile  dbruntime.cu  dbruntime.h  (+102 more)
gpu-db/ssb-10/: q11.codegen.cu  q11.crystal.codegen.cu  q11.crystal.nocount.codegen.cu  q11.nocount.codegen.cu  q12.codegen.cu  q12.crystal.codegen.cu  q12.crystal.nocount.codegen.cu  q12.nocount.codegen.cu  q13.codegen.cu  q13.crystal.codegen.cu  q13.crystal.nocount.codegen.cu  q13.nocount.codegen.cu  q21.codegen.cu  q21.crystal.codegen.cu  q21.crystal.nocount.codegen.cu  q21.nocount.codegen.cu  q22.codegen.cu  q22.crystal.codegen.cu  q22.crystal.nocount.codegen.cu  q22.nocount.codegen.cu  q23.crystal.codegen.cu  q23.crystal.nocount.codegen.cu  q23.maponly.codegen.cu  q23.maponly.nocount.codegen.cu  q31.codegen.cu  q31.crystal.codegen.cu  q31.crystal.nocount.codegen.cu  q31.nocount.codegen.cu  q32.codegen.cu  q32.crystal.codegen.cu  q32.crystal.nocount.codegen.cu  q32.nocount.codegen.cu  q33.crystal.codegen.cu  q33.crystal.nocount.codegen.cu  q33.maponly.codegen.cu  q33.maponly.nocount.codegen.cu  q34.codegen.cu  q34.crystal.codegen.cu  q34.crystal.nocount.codegen.cu  q34.nocount.codegen.cu  (+14 more)
gpu-db/ssb-crystal/: Makefile  dbruntime.cu  q11.codegen.cu  q12.codegen.cu  q13.codegen.cu  q21.codegen.cu  q22.codegen.cu  q23.codegen.cu  q31.codegen.cu  q32.codegen.cu  q33.codegen.cu  q34.codegen.cu  q41.codegen.cu  q42.codegen.cu  q43.codegen.cu
gpu-db/tpch-1/: dbruntime.cu  dbruntime.h  q1.codegen.cu  q1.crystal.peropprofile.codegen.cu  q10.codegen.cu  q10.crystal.nocount.codegen.cu  q10.crystal.peropprofile.codegen.cu  q10.maponly.codegen.cu  q10.maponly.nocount.codegen.cu  q12.codegen.cu  q12.crystal.nocount.peropprofile.codegen.cu  q13.codegen.cu  q13.crystal.nocount.codegen.cu  q13.crystal.nocount.peropprofile.codegen.cu  q13.crystal.peropprofile.codegen.cu  q14.crystal.nocount.peropprofile.codegen.cu  q14.crystal.peropprofile.codegen.cu  q14.maponly.codegen.cu  q14.maponly.nocount.codegen.cu  q16.codegen.cu  q16.crystal.peropprofile.codegen.cu  q17.codegen.cu  q17.crystal.codegen.cu  q17.crystal.nocount.codegen.cu  q17.crystal.nocount.peropprofile.codegen.cu  q17.nocount.codegen.cu  q18.codegen.cu  q18.crystal.peropprofile.codegen.cu  q19.codegen.cu  q19.crystal.nocount.peropprofile.codegen.cu  q20.codegen.cu  q3.codegen.cu  q3.crystal.codegen.cu  (+25 more)
(+351 files in other folders)
